4.0

Breaking Changes:
+ Removed the ability to call steps from steps via string - https://github.com/SpecFlowOSS/SpecFlow/issues/1733
+ Removed .NET Core 2.1 support (min .NET Core version: 3.1)
+ Removed .NET Framework 4.6.1 support (min .NET Framework version: 4.6.2)
+ Bindigns declared as 'async void' are not allowed. Use 'async Task' instead.

Features:
+ Add an option to colorize test result output
+ Support for using Cucumber Expressions for step definitions.
+ Support Rule tags (can be used for hook filters, scoping and access through 'ScenarioInfo.CombinedTags')
+ Support for async step argument transformations. Fixes #2230
+ Support for ValueTask and ValueTask<T> binding methods (step definitions, hooks, step argument transformations)
+ Rules now support Background blocks
+ Collect binding errors (type load, binding, step definition) and report them as exception when any of the tests are executed.

Changes:
+ Existing step definition expressions detected to be either regular or cucumber expression. Check https://docs.specflow.org/projects/specflow/en/latest/Guides/UpgradeSpecFlow3To4.html for potential upgrade issues.
+ Default step definition skeletons are generating cucumber expressions.
+ 'ScenarioInfo.ScenarioAndFeatureTags' has been deprecated in favor of 'ScenarioInfo.CombinedTags'. Now both contain rule tags as well.
+ The interface ISpecFlowOutputHelper has been moved to the TechTalk.SpecFlow namespace (from TechTalk.SpecFlow.Infrastructure).
+ BugFix: SF2649 - AggregateExceptions thrown by async StepDefinition methods are no longer consumed; but passed along to the test host.


3.10

Features:
+ Proper async/await implementation


after 3.9.58

Features:
+ Introduce ability to register and resolve global dependencies using Autofac

Fixes:
+ Support [TableAliases] also outside `CreateInstance`&`CreateSet`. Fixes #1384