@@ -16,5 +16,10 @@ namespace TechTalk.SpecFlow.Bindings
         /// The regular expression matches the step argument. Optional, if null, the transformation receives the entire argument.
         /// </summary>
         Regex Regex { get; }
+        
+        /// <summary>
+        /// The deterministic order for step argument transformation
+        /// </summary>
+        int Order { get; }
     }
 }
