@@ -40,5 +40,25 @@ namespace TechTalk.SpecFlow.RuntimeTests.Bindings
 
             result.Should().BeEquivalentTo(new List<HookBinding> { hook1, hook2 });
         }
+        
+        [Fact]
+        public void GetStepTransformations_should_return_all_step_transformers_in_correct_order()
+        {
+            var sut = new BindingRegistry();
+
+            var sat1 = new StepArgumentTransformationBinding(string.Empty, new Mock<IBindingMethod>().Object);
+            var sat2 = new StepArgumentTransformationBinding(string.Empty, new Mock<IBindingMethod>().Object);
+            var sat3 = new StepArgumentTransformationBinding(string.Empty, new Mock<IBindingMethod>().Object, order: 1);
+            var sat4 = new StepArgumentTransformationBinding(string.Empty, new Mock<IBindingMethod>().Object, null, 2);
+
+            sut.RegisterStepArgumentTransformationBinding(sat4);
+            sut.RegisterStepArgumentTransformationBinding(sat1);
+            sut.RegisterStepArgumentTransformationBinding(sat3);
+            sut.RegisterStepArgumentTransformationBinding(sat2);
+
+            var result = sut.GetStepTransformations();
+
+            result.Should().BeEquivalentTo(new List<StepArgumentTransformationBinding> { sat1, sat2, sat3, sat4 });
+        }
     }
 }
