@@ -4,7 +4,7 @@ Breaking Changes:
 + Removed the ability to call steps from steps via string - https://github.com/SpecFlowOSS/SpecFlow/issues/1733
 + Removed .NET Core 2.1 support (min .NET Core version: 3.1)
 + Removed .NET Framework 4.6.1 support (min .NET Framework version: 4.6.2)
-+ Bindigns declared as 'async void' are not allowed. Use 'async Task' instead.
++ Bindings declared as 'async void' are not allowed. Use 'async Task' instead.
 
 Features:
 + Add an option to colorize test result output
@@ -14,6 +14,7 @@ Features:
 + Support for ValueTask and ValueTask<T> binding methods (step definitions, hooks, step argument transformations)
 + Rules now support Background blocks
 + Collect binding errors (type load, binding, step definition) and report them as exception when any of the tests are executed.
++ Support 'Order' parameter for `StepArgumentTransformationAttribute` to prioritize execution
 
 Changes:
 + Existing step definition expressions detected to be either regular or cucumber expression. Check https://docs.specflow.org/projects/specflow/en/latest/Guides/UpgradeSpecFlow3To4.html for potential upgrade issues.
